@@ -3,6 +3,7 @@ package de.monticore.cd.codegen.decorators;
 
 import static de.monticore.cd.codegen.CD2JavaTemplates.EMPTY_BODY;
 
+import com.google.common.collect.Iterables;
 import de.monticore.cd.codegen.decorators.data.AbstractDecorator;
 import de.monticore.cd.facade.CDMethodFacade;
 import de.monticore.cd.facade.CDParameterFacade;
@@ -18,7 +19,7 @@ import de.monticore.types.MCTypeFacade;
 import de.monticore.types.mccollectiontypes.types3.MCCollectionSymTypeRelations;
 import de.se_rwth.commons.StringTransformations;
 import de.se_rwth.commons.logging.Log;
-import java.util.List;
+import java.util.Collections;
 import org.apache.commons.lang3.StringUtils;
 
 /** Add special handling to the setters of bidirectional associations */
@@ -26,9 +27,11 @@ public class NavigableSetterDecorator extends AbstractDecorator<AbstractDecorato
     implements CDBasisVisitor2 {
 
   @Override
-  public List<Class<? extends IDecorator<?>>> getMustRunAfter() {
+  @SuppressWarnings("rawtypes")
+  public Iterable<Class<? extends IDecorator>> getMustRunAfter() {
     // We require data of the Setter Decorator
-    return List.of(SetterDecorator.class);
+    return Iterables.concat(
+        super.getMustRunAfter(), Collections.singletonList(SetterDecorator.class));
   }
 
   @Override
@@ -37,44 +40,46 @@ public class NavigableSetterDecorator extends AbstractDecorator<AbstractDecorato
         || attribute.getModifier().isReadonly()
         || attribute.getModifier().isFinal()) return;
 
-    // For every attribute, for which the SetterDecorator has created methods:
-    if(decoratorData.getDecoratorData(SetterDecorator.class) == null) return;
-    var methods = decoratorData.getDecoratorData(SetterDecorator.class).methods.get(attribute);
-    if (methods == null || methods.isEmpty()) return;
+    if (decoratorData.shouldDecorate(this.getClass(), attribute)) {
+      // For every attribute, for which the SetterDecorator has created methods:
+      var methods = decoratorData.getDecoratorData(SetterDecorator.class).methods.get(attribute);
+      if (methods == null || methods.isEmpty()) return;
 
-    var role = this.decoratorData.fieldToRoles.get(attribute.getSymbol());
+      var role = this.decoratorData.fieldToRoles.get(attribute.getSymbol());
 
-    // And for which a role symbol was present (before being transformed away) and which is
-    // navigable in both directions
-    if (role == null
-        || !role.isIsDefinitiveNavigable()
-        || !role.getOtherSide().isIsDefinitiveNavigable()) return;
+      // And for which a role symbol was present (before being transformed away) and which is
+      // navigable in both directions
+      if (role == null
+          || !role.isIsDefinitiveNavigable()
+          || !role.getOtherSide().isIsDefinitiveNavigable()) return;
 
-    var otherClassOrig = (ASTCDClass) role.getOtherSide().getEnclosingScope().getAstNode();
-    var otherClassDec = decoratorData.getAsDecorated(otherClassOrig);
+      var otherClassOrig = (ASTCDClass) role.getOtherSide().getEnclosingScope().getAstNode();
+      var otherClassDec = decoratorData.getAsDecorated(otherClassOrig);
 
-    if (MCTypeFacade.getInstance().isBooleanType(attribute.getMCType())) {
-      Log.error("0xTODO: Unable to have a navigable assoc to a boolean", role.getSourcePosition());
-    } else if (MCCollectionSymTypeRelations.isList(attribute.getSymbol().getType())) {
-      Log.warn("0xTODO: WIP List NavSetter ", role.getSourcePosition());
-    } else if (MCCollectionSymTypeRelations.isSet(attribute.getSymbol().getType())) {
-      Log.warn("0xTODO: WIP Set NavSetter ", role.getSourcePosition());
-    } else if (MCCollectionSymTypeRelations.isOptional(attribute.getSymbol().getType())) {
-      Log.warn("0xTODO: WIP Optional NavSetter", role.getSourcePosition());
-    } else {
-      // Add set${role}Local method
-      decorateMandatoryLocal(otherClassDec, role.getOtherSide());
-      // Call ${role}.set${otherRole}Local when updating
-      methods.forEach(
-          m ->
-              glexOpt.ifPresent(
-                  g ->
-                      g.addAfterTemplate(
-                          "methods.Set",
-                          m,
-                          new TemplateHookPoint(
-                              "methods.CallLocal", role.getOtherSide().getName()))));
-      // TODO: Unset old?
+      if (MCTypeFacade.getInstance().isBooleanType(attribute.getMCType())) {
+        Log.error(
+            "0xCDD60: Unable to have a navigable assoc to a boolean", role.getSourcePosition());
+      } else if (MCCollectionSymTypeRelations.isList(attribute.getSymbol().getType())) {
+        Log.warn("0xTODO: WIP List NavSetter ", role.getSourcePosition());
+      } else if (MCCollectionSymTypeRelations.isSet(attribute.getSymbol().getType())) {
+        Log.warn("0xTODO: WIP Set NavSetter ", role.getSourcePosition());
+      } else if (MCCollectionSymTypeRelations.isOptional(attribute.getSymbol().getType())) {
+        Log.warn("0xTODO: WIP Optional NavSetter", role.getSourcePosition());
+      } else {
+        // Add set${role}Local method
+        decorateMandatoryLocal(otherClassDec, role.getOtherSide());
+        // Call ${role}.set${otherRole}Local when updating
+        methods.forEach(
+            m ->
+                glexOpt.ifPresent(
+                    g ->
+                        g.addAfterTemplate(
+                            "methods.Set",
+                            m,
+                            new TemplateHookPoint(
+                                "methods.CallLocal", role.getOtherSide().getName()))));
+        // TODO: Unset old?
+      }
     }
   }
 
